--- a/blogs.html
+++ b/blogs.html
@@ -31,7 +31,7 @@
             <li><a href=index.html>Inicio</a> </li>
             <li><a href=conocimientos.html>conocimientos</a></li>
             <li><a href=profile.html> Docente</a></li>
-            <li><a href="">Contactos </a></li>
+            <!-- <li><a href="">Contactos </a></li> -->
             <li><a href=blog.html>Proyectos</a></li>
         </ul>
     </div>
