--- a/blog.html
+++ b/blog.html
@@ -32,10 +32,10 @@
     <div class="cont-menu active" id=menu>
         <ul>
             <li><a href= index.html >Inicio</a> </li>
-            <li><a href= conocimientos.html>conocimientos</a></li>
+            <li><a href= conocimientos.html>Aprenderás</a></li>
             <li><a href= profile.html>Docente </a></li>
             <!-- <li><a href="">Contactos </a></li> -->
-            <li><a href= blog.html>Proyectos</a></li>
+            <li><a href= blog.html>Realizarás</a></li>
         </ul>
     </div>
     <header class=header>
@@ -65,7 +65,7 @@
         <div class=main-blog__content>
             <article class=blog-content__article>
                 <section class="conoc">
-                    <h3>Proyectos</h3>
+                    <h3>Realizarás</h3>
                 </section>
                 <section class=postsb>
                     <!-- 01 -->
