--- a/blogs.html
+++ b/blogs.html
@@ -29,10 +29,10 @@
     <div class="cont-menu active" id=menu>
         <ul>
             <li><a href=index.html>Inicio</a> </li>
-            <li><a href=conocimientos.html>conocimientos</a></li>
+            <li><a href=conocimientos.html>Aprenderás</a></li>
             <li><a href=profile.html> Docente</a></li>
             <!-- <li><a href="">Contactos </a></li> -->
-            <li><a href=blog.html>Proyectos</a></li>
+            <li><a href=blog.html>Realizarás</a></li>
         </ul>
     </div>
     <header class=header>
@@ -59,10 +59,10 @@
         <div class="menuInf">
             <nav>
             <a class="item-a" href=index.html>Inicio</a> 
-            <a class="item-a" href=conocimientos.html>conocimientos</a>
+            <a class="item-a" href=conocimientos.html>Aprenderás</a>
             <a class="item-a" href=profile.html>Docente</a>
             <!-- <a class="item-a" href="">Contactos </a> -->
-            <a class="item-a" href=blog.html>Proyectos</a>
+            <a class="item-a" href=blog.html>Realizarás</a>
             </nav>
         </div>
     </section>
@@ -75,7 +75,7 @@
                 <h3>Experiencias</h3>
                 <img src=../../images/programación.png alt="Imagen de blog">
                 <div class=news-info>
-                    <h2>Proyectos</h2>
+                    <h2>Realizarás</h2>
                     <p> En este apartado se muestran algunas de las cosas que se realizaran en el curso el cual tiene una duracion de 1 año.
                     </p>
                     <a class=blogs-btn2 href=blog.html>Leer más</a>
@@ -83,7 +83,7 @@
             </div>
         </section>
         <section class="conoc">
-            <h3>Conocimientos</h3>
+            <h3>Aprenderás</h3>
         </section>
         <section class=posts>
             <div class=posts-blogs>
