--- a/conocimientos.html
+++ b/conocimientos.html
@@ -27,10 +27,10 @@
 <div class="cont-menu active" id=menu>
 <ul>
 <li><a href=index.html>Inicio</a> </li>
-<li><a href=conocimientos.html>conocimientos</a></li>
+<li><a href=conocimientos.html>Aprenderás</a></li>
 <li><a href=profile.html>Docente </a></li>
 <!-- <li><a href="">Contactos </a></li> -->
-<li><a href=blog.html>Proyectos</a></li>
+<li><a href=blog.html>Realizarás</a></li>
 </ul>
 </div>
 <header class=header>
@@ -58,7 +58,7 @@
     <div class=main-blog1__content>
 <article class=blog-content__article1>
 <section class=posts2>
-<h3>Conocimientos</h3>
+<h3>Aprenderás</h3>
 <div>
     <h4>AutoCad y Modelado 3D</h4>
 <img width=300 height=600 src=../images/cursos-de-torneria-gratis.png alt="">
