--- a/profile.html
+++ b/profile.html
@@ -21,10 +21,10 @@
 <div class="cont-menu active" id=menu>
 <ul>
 <li><a href=index.html>Inicio</a> </li>
-<li><a href=conocimientos.html>conocimientos</a></li>
+<li><a href=conocimientos.html>Aprenderás</a></li>
 <li><a href=profile.html>Docente </a></li>
 <!-- <li><a href="">Contactos </a></li> -->
-<li><a href=blog.html>Proyectos</a></li>
+<li><a href=blog.html>Realizarás</a></li>
 </ul>
 </div>
 <header class=header>
@@ -57,7 +57,7 @@ tengo 22 años soy técnico electromecánico vivo en Argentina, siempre me inter
 </p>
 </div>
 </section>
-<section class=project-container>
+<!-- <section class=project-container>
 <h3>Futuros Proyectos</h3>
 <div class=project>
 <h4>Protesis 3D</h4>
@@ -77,9 +77,9 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus neque quas id,
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus neque quas id, repudiandae vero, dignissimos illum corrupti temporibus ipsa est iste vitae a sit incidunt ad ratione assumenda. Doloremque, qui?
 </p>
 </div>
-</section>
+</section> -->
 </main>
-<section class=section-contact>
+<!-- <section class=section-contact>
 <div class=contact>
 <img src=./../images/email.png alt="">
 <div class=contact-info>
@@ -96,6 +96,27 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus neque quas id,
 </div>
 <div class=contact>
 </div>
+</section>
+<section> -->
+    <form method="post" action="#">
+        <div class="fields">
+            <div class="field half">
+                <label for="name">Nombre</label>
+                <input type="text" name="name" id="name" />
+            </div>
+            <div class="field half">
+                <label for="email">Email</label>
+                <input type="text" name="email" id="email" />
+            </div>
+            <div class="field">
+                <label for="message">Mensaje</label>
+                <textarea name="message" id="message" rows="5"></textarea>
+            </div>
+        </div>
+        <ul class="actions">
+            <li><a href="" class="button submit">Inscribirme</a></li>
+        </ul>
+    </form>
 </section>
 <footer>
 <p>
